; ModuleID = '/home/carl/AnghaBench/redis/src/extr_evict.c_freeMemoryIfNeededAndSafe.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_evict.c_freeMemoryIfNeededAndSafe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@C_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @freeMemoryIfNeededAndSafe() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %4, %0
  %8 = load i32, i32* @C_OK, align 4
  store i32 %8, i32* %1, align 4
  br label %11

9:                                                ; preds = %4
  %10 = call i32 (...) @freeMemoryIfNeeded()
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %9, %7
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @freeMemoryIfNeeded(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
